@@ -36,6 +36,7 @@ Changes in 2.8
 - Move assets/ & locale paths from config.inc.php to Warehouse.php
 - Activate links in Events descriptions in Portal.php & Calendar.php
 - Check if event is in Moodle before update in Moodle/functions.php
+- Display MLTextInput value when PDF or no edit allowed in Inputs.php
 
 Upgrade from 2.7.x
 ------------------
